--- a/app/frontend/assets/styles/components/_spinner.scss
+++ b/app/frontend/assets/styles/components/_spinner.scss
@@ -26,7 +26,7 @@ turbo-frame {
         border-radius: 50%;
         width: 60px;
         height: 60px;
-        animation: spin 2s linear infinite;
+        animation: spinner 2s linear infinite;
         left: calc(50% - 30px);
         top: calc(50% - 30px);
         display: block;
@@ -68,14 +68,5 @@ turbo-frame {
                 position: absolute;
             }
         }
-    }
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
     }
 }
