--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -1,6 +1,7 @@
 @import "./theme";
 @import "./base";
 @import "./components/fonts";
+@import "./components/animations";
 @import "./components/tables";
 @import "./components/buttons";
 @import "./components/pageHeader";
