--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -1,3 +1,21 @@
+.dashboard-subjects {
+    li {
+        margin-right: 1em;
+        a {
+            font-size: 0.75em;
+            text-decoration: none;
+            color: $black;
+
+            &.active,
+            &:hover {
+                text-shadow:
+                    0 0 0.9px #333,
+                    0 0 0.65px #333;
+            }
+        }
+    }
+}
+
 canvas {
     background-color: $white;
     padding: $alert-padding-x;
